--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -1,6 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-11 col-md-offset-0">
+            <div class="errorBox text-center">
+                <div ng-if="loginControllerModel.showError"
+                     role="alert"
+                     class="alert alert-danger alert-dismissible">
+                    <button type="button"
+                            class="close btn-xs"
+                            data-dismiss="alert"
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <strong>Incorrect username/password!</strong>Try entering correct userid/password.
+                </div>
+            </div>
             <h2 class="page-header col-sm-offset-1 col-sm-10 text-center">Login</h2>
             <form class="form-horizontal">
                 <div class="form-group">
@@ -42,17 +55,6 @@
                     </div>
                 </div>
             </form>
-            <div ng-if="loginControllerModel.showError"
-                 role="alert"
-                 class="alert alert-danger alert-dismissible">
-                <button type="button"
-                        class="close btn-xs"
-                        data-dismiss="alert"
-                        aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <strong>Incorrect username/password!</strong>Try entering correct userid/password.
-            </div>
         </div>
     </div>
 </div>
