fixed bug in admin for assignment and added autofocus in project

--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -24,7 +24,7 @@
                             </span>
                             <input ng-model="loginControllerModel.user.username" type="text"
                                    class="form-control" id="username"
-                                   placeholder="Username"/>
+                                   placeholder="Username" autofocus/>
                         </div>
                     </div>
                 </div>
