--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -26,7 +26,8 @@
                             <input ng-model="registerControllerModel.user.firstName"
                                    type="text"
                                    class="form-control"
-                                   placeholder="First name"/>
+                                   id="firstname"
+                                   placeholder="First name" autofocus/>
                         </div>
                     </div>
                 </div>
