--- a/public/assignment/client/css/style.css
+++ b/public/assignment/client/css/style.css
@@ -34,6 +34,11 @@
     color: #5e5e5e;
 }
 
+.glyphicon.glyphicon-cog{
+    font-size: 20px;
+    color: #5e5e5e;
+}
+
 .glyphicon.glyphicon-align-justify{
     font-size: 20px;
     color: #337ab7;
